Fix menu overflow with admin bar

--- a/assets/styles/modules/navbar.scss
+++ b/assets/styles/modules/navbar.scss
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: #{$screen-desktop}) {
-    height: 100px;
+    top: 15px;
   }
 
   .container {
